# DRIVERS_CODEBASE

./: .gitignore  README.md
CMAKE_EXAMPLE/: CMakeLists.txt  Makefile  gcc-arm-none-eabi.cmake
CMAKE_EXAMPLE/App/Src/: config.c
CMAKE_EXAMPLE/Drivers/Inc/: driver_uart.h
CMAKE_EXAMPLE/Linkers/: syscalls.c
RA4M1/: Makefile
RA4M1/App/Src/: main.c
RA4M1/Linkers/: RA4M.ld  RA4M1.cfg  startup.c
STM32F401/: Makefile
STM32F401/App/Src/: config.c  main.c
STM32F401/Common/Inc/comms/: serial.h
STM32F401/Common/Inc/utils/: ring-buffer.h
STM32F401/Common/Src/comms/: serial.c
STM32F401/Common/Src/utils/: ring-buffer.c
STM32F401/Drivers/Inc/: driver_gpio.h  driver_systick.h  driver_uart.h  stm32f401xx.h
STM32F401/Drivers/Src/: driver_clock.c  driver_systick.c  driver_uart.c  system.c
STM32G0/: Makefile
STM32G0/App/Inc/: config.h
STM32G0/App/Src/: blinky.c  config.c  main.c
STM32G0/Apps/Inc/: config.h
STM32G0/Apps/Src/: config.c  main.c
STM32G0/Drivers/: README.md
STM32G0/Drivers/Inc/: driver_gpio.h  stm32g0.h
STM32G0/Drivers/Src/: driver_gpio.c
